# maxlen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml
maxlen-macro/: Cargo.toml
maxlen-macro/src/: encoding  lib.rs
src/: bslice.rs  bstr.rs  bstring.rs  bvec.rs  const_checks.rs  error.rs  lib.rs
src/encoding/: cesu8.rs  mcesu8.rs  mod.rs  utf8.rs
