[workspace]

[package]
name = "maxlen"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Length-bounded string and slice/vector"
repository = "https://github.com/PonasKovas/maxlen"
readme = "README.md"

[dependencies]
thiserror = "1.0"
maxlen-macro = "0.1"
serde = { version = "1.0", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]