[package]
name = "maxlen-macro"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Length-bounded string and slice/vector"
repository = "https://github.com/PonasKovas/maxlen"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-error = "1.0"